# ppmdi1-cffi

./: Changelog.rst  MANIFEST.in  README.rst  setup.cfg
.github/workflows/: cibuildwheel.yml  codeql-analysis.yml  release-note.yml  run-tox-tests.yml
src/: ffi_build.py
src/ext/: PpmdPy.h
src/ppmd/: __init__.py
