[flake8]
max-line-length = 125

[bdist_wheel]
universal = 0

[metadata]
name = ppmdi1
description = PPMd Variation I version 1 compression/decompression library
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = ppmd, compression
license = LGPL-2.1+
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/ppmdi1
classifiers =
      Development Status :: 3 - Alpha
      License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3.9
      Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
      cffi>=1.14.0
setup_requires =
      cffi>=1.14.0
      setuptools-scm>=3.5.0
      setuptools>=42.0
package_dir =
    =src
packages = find:
provides = ppmdi1

[options.packages.find]
where = src

[options.extras_require]
test =
      pytest>=6.0
      pytest-cov
      hypothesis
      coverage[toml]>=5.2
check =
      check-manifest
      flake8
      readme-renderer
      pygments
      isort>=5.0.3
